[package]
name = "kakure"
version = "1.0.0"
authors = ["Felix Wittwer <dev@felixwittwer.de>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
crossterm = "0.19"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
clap = "3.0.0-beta.2"
